Changes made by Davy de Jong (davy_de_jong@hotmail.com).

--- a/Vosje2/index.html
+++ b/Vosje2/index.html
@@ -24,72 +24,81 @@
              data-title="Home">
 
             <div data-role="content" class="view-content">
-                <h1>Welcome!</h1>
+                <h1>Eetpaleis 't Vosje</h1>
                 <a id="skin-change" data-role="button" data-click="app.changeSkin">Flat</a>
                 <p>
-                    Icenium&trade; enables you to build cross-platform device applications regardless of your
-                    development platform by combining the convenience of a local development toolset with the
-                    power and flexibility of the cloud.
+                    <strong>Eetpaleis ‘t Vosje</strong> is al geruime tijd gevestigd in het centrum van Berlicum, aan het Mercuriusplein.
                 </p>
                 <p>
-                    RIK DINGEMANS, OETLUL
+                    Kwaliteit & Service staan bij Eetpaleis ‘t Vosje hoog in het vaandel. Met de jarenlange ervaring, van vader op zoon, is alle kennis in huis om een goed en eerlijk product te leveren.
                 </p>
-                <div class="img" style="margin:auto" ></div>
+                <p>
+                    De Poef eet graag een frietje speciaal...
+                </p>
+                <div class="img"></div>
             </div>
         </div>
 
         <div id="tabstrip-contact"
               data-role="view"
              data-title="Contact">
-            
-  
-            <div data-role="content" class="view-content">
-                <h1>Contact</h1>
-                <a id="skin-change" data-role="button" data-click="app.changeSkin">Flat</a>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <p>
-                    Neem contact op met de Vos!
-                </p>
-                <div class="img"></div>
-            </div>
+            <ul data-role="listview" data-style="inset" data-type="group">
+                <li>
+                    Frieten
+                    <ul>
+                        <li>
+                            <img src="styles/images/patat.jpg" style="width:100px;float:left;margin-right:20px;" />
+                            <h4>Friet zonder</h4>
+                        </li>
+                        <li>
+                            <img src="styles/images/patat.jpg" style="width:100px;float:left;margin-right:20px;" />
+                            <h4>Friet met</h4>
+                        </li>
+                        <li>
+                            <img src="styles/images/patat.jpg" style="width:100px;float:left;margin-right:20px;" />
+                            <h4>Friet zonder met</h4>
+                        </li>
+                        <li>
+                            <img src="styles/images/patat.jpg" style="width:100px;float:left;margin-right:20px;" />
+                            <h4>Friet speciaal</h4>
+                        </li>
+                     </ul>
+                </li>
+                <li>
+                    Dellekes
+                    <ul>
+                        <li>
+                            <img src="styles/images/frikandel.jpg" style="width:100px;float:left;margin-right:20px;" />
+                            <h4>Frikandel met</h4>
+                        </li>
+                        <li>
+                            <img src="styles/images/frikspec.jpg" style="width:100px;float:left;margin-right:20px;margin-top:15px" />
+                            <h4>Frikandel speciaal</h4>
+                        </li>
+
+                        </ul>
+                </li>
+                <li>
+                    Supertjes
+                    <ul>
+                        <li>
+                            <h4>Groot godsakkers supertje speciaal</h4>
+                        </li>
+
+                        </ul>
+                </li>
+                <li>
+                    Frisdrank
+                    <ul>
+                        <li>
+                            <h4>Blikske Fanta</h4>
+                        </li>
+                        <li>
+                            <h4>Nog een blikske Fanta</h4>
+                        </li>
+                    </ul>
+                </li>
+            </ul>            
           
         </div>
         <!--Login-->
@@ -211,11 +220,11 @@
             <!--Footer-->
             <div data-role="footer">
                 <div data-role="tabstrip">
-                    <a href="#tabstrip-home" data-icon="home">Home</a>
-                    <a href="#tabstrip-contact" data-icon="contacts">Contact</a>
+                    <a href="#tabstrip-home" data-icon="home">Welkom</a>
+                    <a href="#tabstrip-contact" data-icon="contacts">Bestel</a>
                     <a href="#tabstrip-login" data-icon="contacts">Login</a>
-                    <a href="#tabstrip-location" data-icon="search">Location</a>
-                    <a href="#tabstrip-weather" data-icon="globe">Weather</a>
+                    <a href="#tabstrip-location" data-icon="search">Locatie</a>
+                    <a href="#tabstrip-weather" data-icon="globe">Weer</a>
                 </div>
             </div>
         </div>
