Changes made by Jan Verhagen (verhagen.jca@gmail.com).

--- a/Vosje2/index.html
+++ b/Vosje2/index.html
@@ -31,7 +31,7 @@
                 </p>
                 <p>
                     Kwaliteit & Service staan bij Eetpaleis ‘t Vosje hoog in het vaandel. Met de jarenlange ervaring, van vader op zoon, is alle kennis in huis om een goed en eerlijk product te leveren.
-                </p>
+                </p>IDpartners
                 <div class="img"></div>
             </div>
         </div>
